# Stellar_tree

./: .gitignore  CMakeLists.txt  README.md  Stellar_Library.cbp  clean_build_and_cmake_config_files.sh  data  run.sh
bib/: stellar_bibliography.bib
cmake/Modules/: FindBITMAGIC.cmake
examples/stellar_suite/: main.cpp  main_cp_functions.cpp  main_cp_functions.h  main_lite.cpp  main_simplicial_functions.cpp  main_simplicial_functions.h  main_utility_functions.cpp  main_utility_functions.h
sources/: CMakeLists.txt
sources/io/: reader.cpp  reader.h  writer.cpp  writer.h
sources/simplification/: contraction_simplifier_top.cpp  contraction_simplifier_top.h  contraction_simplifier_top_length.cpp  contraction_simplifier_weak.cpp  contraction_simplifier_weak.h  contraction_simplifier_weak_length.cpp  edges_aux_structures.h  simplification_aux_structures.cpp  simplification_aux_structures.h
sources/statistics/: index_statistics.h  statistics.cpp  statistics.h  statistics_index.h
sources/stellar_decomposition/: node.h  node_stellar.cpp  node_stellar.h  node_v.h  reindexer.cpp  reindexer.h  run_iterator.h  top_cell.cpp  top_cell.h  top_cp_cell.cpp  top_cp_cell.h  top_simplex.cpp  top_simplex.h
sources/stellar_tree/: box.h  cells_soup.h  explicit_cell.h  mesh.h  mesh_updater.h  point.h  spatial_subdivision.h  stellar_tree.cpp  stellar_tree.h  stellar_tree_generation.h  stellar_tree_update.h  stellar_tree_visit.h  vertex.h
sources/topological_ds/: adjacency_aux_structure.h  adjacency_graph.cpp  adjacency_graph.h  halfedge.h  iastar.cpp  iastar.h  ig.h  ig_node.h  links_aux_structures.cpp  links_aux_structures.h  skeleton.cpp  skeleton.h
sources/topological_ds_generator/: adjacency_graph_extractor.cpp  adjacency_graph_extractor.h  halfedge_generator.cpp  halfedge_generator.h  iastar_generator.cpp  iastar_generator.h  iastar_statistics.h  ig_generator.cpp  ig_generator.h  ig_statistics.h  skeleton_generator.cpp  skeleton_generator.h
sources/topological_queries/: topological_query_extractor.cpp  topological_query_extractor.h
sources/utilities/: basic_wrappers.h  cli_parameters.h  color.cpp  color.h  combinatorial_utilities.cpp  combinatorial_utilities.h  container_utilities.h  string_management.cpp  string_management.h  timer.cpp  timer.h  usage.h
sources/validator/: connectedness_validator.cpp  connectedness_validator.h  connectedness_validator_adjs.cpp  connectedness_validator_adjs.h  connectedness_validator_skeleton.cpp  connectedness_validator_skeleton.h  connectedness_validator_stats.h  links_validator.cpp  links_validator.h  mesh_repairer.h
sources/vietoris_rips/: blockers_extractor.cpp  blockers_extractor.h  vietoris_rips_aux_structures.h  vietoris_rips_generator.cpp  vietoris_rips_generator.h
